[package]
name = "oraculum_core"
version = "0.1.0"
edition = "2021"

[dependencies]
# 1. The Physics/World Engine
tokenizers = { version = "0.19", features = ["http"] }
csv = "1.3"
rayon = "1.8"

# 2. The Brain (Apple MLX Bindings - via Python Bridge now, but keep for future)
mlx-rs = "0.25.3"

# 3. Web Server & API
actix-web = "4.4"
actix-cors = "0.6"  # Allows your Frontend to talk to the Backend
uuid = { version = "1.4", features = ["v4", "serde"] }

# 4. Utilities
# UPDATE: Added for "The Scout" (Internet Search)
ureq = { version = "2.9", features = ["json"] }
scraper = "0.18" 
urlencoding = "2.1"

tokio = { version = "1.0", features = ["full"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5" # Thread-safe map for storing jobs in memory

bevy = "0.15"
reqwest = { version = "0.12", features = ["json", "blocking"] } 